--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>test page</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <p>test page content</p>
+        <p style="color:green">second line</p>
+        <p id="change_text">not changed</p>
+        <button type="button">Run Code!</button>
     </body>
+    <script src="scripts.js"></script>
 </html>
