update to button code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <p>test page content</p>
         <p style="color:green">second line</p>
         <p id="change_text">not changed</p>
-        <button type="button">Run Code!</button>
+        <button id="test_button" type="button">Run Code!</button>
     </body>
     <script src="scripts.js"></script>
 </html>
