--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <p id="Version">Version: 0</p>
         <p>3 test page content</p>
         <p style="color:green">second line</p>
         <p id="change_text">not changed</p>
