--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
   <body>
     <h1>Hello, world!</h1>
 
-      <form class="needs-validation" novalidate>
-        <label for="firstName" class="form-label">First name</label>
-        <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-      </form>
+    <div class="container">
+      <main>
+        <form class="needs-validation" novalidate>
+          <label for="firstName" class="form-label">First name</label>
+          <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+        </form>
+      </main>
+    </div>
 
 
     <!-- Bootstrap Bundle with Popper -->
