--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Check me out</label>
       </div>
+
+      <label for="customRange3" class="form-label">Example range</label>
+      <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
+
+      
       <button type="submit" class="btn btn-primary">Submit</button>
+
+
     </form>
 
 
