--- a/index.html
+++ b/index.html
@@ -12,24 +12,15 @@
   </head>
   <body>
     <form>
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      <div class="form-floating mb-3">
+        <input type="time" class="form-control" id="wakeup" placeholder="07:00">
+        <label for="wakeup">Wake-up time</label>
       </div>
 
-      <label for="customRange3" class="form-label">Example range</label>
-      <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
+      <label for="awake1" class="form-label">Wake Window 1</label>
+      <input type="range" class="form-range" id="Wake_Window_1" min="0" max="12" step="0.25">
 
-      
+
       <button type="submit" class="btn btn-primary">Submit</button>
 
 
