--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Ethan's NapStar Plan</title>
   </head>
+
   <body>
     <form>
       <div class="form-floating mb-3">
         <input type="time" class="form-control" id="wakeup" placeholder="07:00">
         <label for="wakeup">Wake-up time</label>
       </div>
+      <div class="form-floating mb-3">
+        <input type="time" class="form-control" id="wake_window_1" placeholder="02:30">
+        <label for="wake_window_1">Wake Window 1</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="time" class="form-control" id="nap_1" placeholder="01:00">
+        <label for="nap_1">Nap 1</label>
+      </div>
 
-      <label for="awake1" class="form-label">Wake Window 1</label>
-      <input type="range" class="form-range" id="Wake_Window_1" min="0" max="12" step="0.25">
 
 
       <button type="submit" class="btn btn-primary">Submit</button>
