--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <form>
       <div class="form-floating mb-3">
-        <input type="time" class="form-control" id="wakeup" placeholder="07:30:00">
+        <input type="time" class="form-control" id="wakeup" placeholder="07:30:00" onChange="inputChanged()">
         <label for="wakeup">Wake-up time</label>
       </div>
       <div class="form-floating mb-3">
@@ -36,6 +36,10 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <script>
+      function inputChanged() {
+        alert("Input changed");
+      }
+      </script>
   </body>
 </html>
