--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <label for="nap_1">Nap 1</label>
       </div>
 
+      <label for="customRange3" class="form-label">Example range</label>
+      <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3" value="1">
+
 
 
       <button type="submit" class="btn btn-primary">Submit</button>
