--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <input type="range" class="form-range" min="0" max="5" step="1" id="customRange3" value="1">
           </div>
           <div class="col">
-            One of two columns
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
           </div>
         </div>
 
