--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
       <div class="container">
         <div class="row align-items-start">
           <div class="col">
-            <label for="customRange3" class="form-label">Example range</label>
-            <input type="range" class="form-range" min="0" max="5" step="1" id="customRange3" value="1">
+            
+            <label for="time1" class="form-label">Example range</label>
+            <input type="range" class="form-range" min="0" max="5" step="1" id="time1" value="1">
+
+            <label for="time2" class="form-label">Example range</label>
+            <input type="range" class="form-range" min="0" max="5" step="1" id="time2" value="1">
+
           </div>
           <div class="col">
             <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
