--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="container">
         <div class="row align-items-start">
           <div class="col">
+            <!-- User Inputs -->
             
             <label for="time1" class="form-label">Example range</label>
             <input type="range" class="form-range" min="0" max="5" step="1" id="time1" value="1">
@@ -25,11 +26,21 @@
 
           </div>
           <div class="col">
+            <!-- Progress Bars -->
+
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
+
+          <div class="col">
+            <!-- Text -->
+
+            <p class="text-center">Center aligned text on all viewport sizes.</p>
+          </div>
+
+          <p class="text-center">Center aligned text on all viewport sizes.</p>
         </div>
 
 
