--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- User Inputs -->
             
             <label for="time1" class="form-label">Example range</label>
-            <input type="range" class="form-range" min="0" max="5" step="1" id="time1" value="1">
+            <input type="range" class="form-range" min="0" max="5" step="1" id="time1" value="1" onchange="inputChanged()">
 
             <label for="time2" class="form-label">Example range</label>
             <input type="range" class="form-range" min="0" max="5" step="1" id="time2" value="1">
@@ -40,15 +40,7 @@
             <p class="text-center">Center aligned text on all viewport sizes.</p>
           </div>
 
-          <p class="text-center">Center aligned text on all viewport sizes.</p>
         </div>
-
-
-
-
-
-
-      <button type="submit" class="btn btn-primary">Submit</button>
 
 
     </form>
