--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="./stylesheet.css" rel="stylesheet">
 
     <title>Ethan's NapStar Plan</title>
   </head>
@@ -18,10 +19,10 @@
           <div class="col">
             <!-- User Inputs -->
             
-            <label for="time1" class="form-label">Example range</label>
+            <label for="time1" class="form-label">time1</label>
             <input type="range" class="form-range" min="0" max="5" step="1" id="time1" value="1" onchange="inputChanged()">
 
-            <label for="time2" class="form-label">Example range</label>
+            <label for="time2" class="form-label">time2</label>
             <input type="range" class="form-range" min="0" max="5" step="1" id="time2" value="1">
 
           </div>
@@ -37,6 +38,7 @@
           <div class="col">
             <!-- Text -->
 
+            <p class="text-center">Center aligned text on all viewport sizes.</p>
             <p class="text-center">Center aligned text on all viewport sizes.</p>
           </div>
 
