--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Ethan's NapStar Plan v2</title>
+    <title>Ethan's NapStar Plan v3</title>
   </head>
 
   <body>
     <form>
       <div class="container">
         <div class="row align-items-start">
+
           <div class="col">
             <!-- User Inputs -->
+
             <div class="row">
               <label for="time1" class="form-label">time1</label>
               <input type="range" class="form-range" min="0" max="5" step="1" id="time1" value="1" onchange="inputChanged()">
@@ -28,26 +30,31 @@
             </div>
 
           </div>
+
           <div class="col">
             <!-- Progress Bars -->
 
-            <div class="progress">
-              <div class="row">
-                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-              <div class="row">
+            <div class="row"></div>
+              <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+
+            <div class="row"></div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
           </div>
 
           <div class="col">
             <!-- Text -->
-            
-              <p class="text-center">Center aligned text on all viewport sizes.</p>
+            <div class="row">
+              <p class="text-center">Time 1.</p>
             </div>
             <div class="row">
-              <p class="text-center">Center aligned text on all viewport sizes.</p>
+              <p class="text-center">Time 2.</p>
             </div>
           </div>
 
