--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Ethan's NapStar Plan v4</title>
+    <title>Ethan's NapStar Plan v5</title>
   </head>
 
   <body>
     <form>
       <div class="container">
-        <div class="row align-items-start">
 
-          <div class="col">
+        <div class="col">
             <!-- User Inputs -->
 
             <div class="row">
@@ -60,6 +59,7 @@
 
         </div>
 
+      </div>
 
     </form>
 
