--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Ethan's NapStar Plan v6</title>
+    <title>Ethan's NapStar Plan v7</title>
   </head>
 
   <body>
@@ -28,6 +28,23 @@
           <div class="col">
             <div class="row">
               <p class="text-center">Time 1.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <label for="time2" class="form-label">time1</label>
+            <input type="range" class="form-range" min="0" max="5" step="1" id="time2" value="1">
+          </div>
+          <div class="col">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" id="prog2"></div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="row">
+              <p class="text-center">Time 2.</p>
             </div>
           </div>
         </div>
